# backend/cmd/server/main.go
@@ -10,9 +10,12 @@ import (
 	"os"
 	"wsai/backend/config"
 	_ "wsai/backend/docs"
+	"wsai/backend/internal/ai"
 	"wsai/backend/internal/common/mysql"
+	"wsai/backend/internal/common/rabbitmq"
 	"wsai/backend/internal/common/redis"
 	"wsai/backend/internal/logger"
+	"wsai/backend/internal/repository/message"
 	"wsai/backend/internal/router"
 
 	"github.com/gin-gonic/gin"
@@ -28,14 +31,53 @@ func StartServer(addr string, port int) error {
 
 }
 
+func readDataFromDB() error {
+	manager := ai.GetGlobalManager()
+
+	msgs, err := message.GetAllMessages()
+	if err != nil {
+		logger.L().Error("从数据库加载所有信息失败",
+			zap.Error(err))
+		return err
+	}
+	if len(msgs) == 0 {
+		logger.L().Info("数据库无历史消息，无需恢复")
+		return nil
+	}
+	logger.L().Info("开始从数据库恢复会话消息",
+		zap.Int("total_messages", len(msgs)),
+	)
+	for i := range msgs {
+		msg := &msgs[i]
+		modelType := ai.ModelTypeOpenAI
+		config := make(map[string]interface{})
+
+		helper, err := manager.GetOrCreateAIHelper(msg.UserName, msg.SessionID, modelType, config)
+		if err != nil {
+			logger.L().Error("创建获取AIHelper失败",
+				zap.String("username", msg.UserName),
+				zap.String("sessionID", msg.SessionID),
+				zap.Error(err),
+			)
+			continue
+		}
+		helper.AddMessage(msg.Content, msg.UserName, msg.IsUser, false)
+		logger.L().Debug("成功恢复会话消息",
+			zap.String("username", msg.UserName),
+			zap.String("session_id", msg.SessionID),
+		)
+	}
+	return nil
+}
+
 func main() {
 	config.InitConfig()
-	if config.C.App.Env == "prod" {
+	isProd := config.C.App.Env == "prod"
+	if isProd {
 		gin.SetMode(gin.ReleaseMode)
 	} else {
 		gin.SetMode(gin.DebugMode) // 默认
 	}
-	isProd := config.C.App.Env == "prod"
 	if err := logger.Init(isProd); err != nil {
 		panic(err)
 	}
@@ -52,13 +94,16 @@ func main() {
 	)
 
 	if err := mysql.Init(); err != nil {
-		logger.L().Fatal("MySQL 初始化失败，无法继续运行", zap.Error(err))
+		logger.L().Fatal(
+			"MySQL 初始化失败，无法继续运行", zap.Error(err))
 	}
+
+	readDataFromDB()
 	if err := redis.Init(); err != nil {
 		logger.L().Error("Redis 初始化失败，将影响相关功能", zap.Error(err))
 	}
 
-	//rabbitmq.Init()
+	rabbitmq.InitRabbitMQ()
 
 	host := config.C.App.Host
 	port := config.C.App.Port
